--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,25 @@
+:root {
+  --main-bg-color: #e4e8f1;
+  --secondary-text-color: #99a3a9;
+
+  --app-max-width: 350px;
+}
+
+body {
+  padding: 20px;
+  background-color: var(--main-bg-color);
+}
+
 .App {
+  margin: auto;
+  max-width: var(--app-max-width);
   font-family: sans-serif;
-  text-align: center;
+}
+
+#calendar {
+}
+
+#location {
+  color: var(--secondary-text-color);
+  font-size: 12px;
 }
