--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 :root {
   --main-bg-color: #e4e8f1;
-  --secondary-text-color: #99a3a9;
+  --secondary-text-color: #828282;
 
   --app-max-width: 350px;
 }
