--- a/src/components/PrayerTimeTable/PrayerTimeTable.css
+++ b/src/components/PrayerTimeTable/PrayerTimeTable.css
@@ -1,7 +1,7 @@
 :root {
   --main-bg-color: coral;
   --prayerTime-bg-color: white;
-  --prayerTime-border-color: #fbfbfc;
+  --prayerTime-border-color: #d5d5d5;
   --prayerTime-primary-text-color: black;
   --prayerTime-secondary-text-color: #99a3a9;
   --current-prayerTime-bg-color: #4489fe;
@@ -10,15 +10,15 @@
 
   --gutter-size: 15px;
   --primary-text-font-size: 16px;
-  --secondary-text-font-size: 12px;
+  --secondary-text-font-size: 14px;
 }
 
 #prayerTimeTable {
   padding: 0;
   list-style: none;
-  -webkit-box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 0px 70px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 70px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 70px 0px rgba(0, 0, 0, 0.2);
 }
 
 #prayerTimeRow {
