--- a/src/Components/PrayerTime/PrayerTime.css
+++ b/src/Components/PrayerTime/PrayerTime.css
@@ -2,10 +2,8 @@
   --secondary-text-color: #828282;
 }
 
-#noLocation {
-    text-align: center;
-    margin-top: 20vh;
-    line-height: 1.5;
+.settings-icon {
+    color: var(--secondary-text-color);
 }
 
 #location {
