--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,15 @@ button.shadow {
     -moz-box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.3);
 }
+
+select {
+    padding: 10px;
+}
+
+.pull-right {
+    float: right;
+}
+
+.pull-left {
+    float: left;
+}
