--- a/src/Components/Settings/Settings.css
+++ b/src/Components/Settings/Settings.css
@@ -7,18 +7,20 @@
 }
 
 #settings h1 {
-        font-size: 20px;
+    margin: 0;
+    font-size: 20px;
     font-weight: normal;
 }
 
 #settings h2 {
-        font-size: 16px;
+    font-size: 16px;
     font-weight: normal;
 }
 
 #settings h3 {
-        font-size: 14px;
+    font-size: 14px;
     font-weight: normal;
+    color: var(--prayerTime-secondary-text-color);
 }
 
 #settings p {}
