--- a/src/Components/PrayerTimeTable/PrayerTimeTable.css
+++ b/src/Components/PrayerTimeTable/PrayerTimeTable.css
@@ -15,6 +15,7 @@
 
 #prayerTimeTable {
   padding: 0;
+  margin: 0;
   list-style: none;
   -webkit-box-shadow: 0px 0px 70px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 70px 0px rgba(0, 0, 0, 0.2);
