--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 :root {
   --main-bg-color: #e4e8f1;
 
-  --app-max-width: 350px;
+  --app-max-width: 400px;
 }
 
 body {
+  width: 100%;
+  height: 100%;
   padding: 0px;
   margin: 0px;
   background-color: var(--main-bg-color);
