--- a/src/Components/PrayerTimeTable/PrayerTimeTable.css
+++ b/src/Components/PrayerTimeTable/PrayerTimeTable.css
@@ -17,9 +17,9 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  -webkit-box-shadow: 0px 0px 70px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 0px 70px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 0px 70px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,.2), 0 0 70px 0 rgba(0,0,0,.2);
+  -moz-box-shadow: 0 0 10px 0 rgba(0,0,0,.2), 0 0 70px 0 rgba(0,0,0,.2);
+  box-shadow: 0 0 10px 0 rgba(0,0,0,.2), 0 0 70px 0 rgba(0,0,0,.2);
 }
 
 #prayerTimeRow {
